Push to Heroku round 2

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -2,4 +2,6 @@ $orange: #fC4C02;
 $grey: #606065;
 $button-hover-grey: #E7E6EC;
 $button-text-hover-black: #2F3035;
+$strava-fonts: -apple-system, system-ui, BlinkMacSystemFont, Roboto, 'Segoe UI', 
+    'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
