--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,7 +5,7 @@
     align-content: center;
     text-align: center;
     height: 55px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #e6e6eb;
     // flex-wrap: wrap;
 }
 
@@ -30,8 +30,8 @@
 }
 
 .navbar-button {
-    height: 20px;
-    width: 55px;
+    height: 28px;
+    width: 69px;
     background: white;
     cursor: pointer;
     padding: 6px 16px;
@@ -40,6 +40,8 @@
     text-decoration: none;
     align-self: center;
     font-size: 14px;
+    font-family: $strava-fonts;
+    font-weight: bold;
     text-align: center;
     display: flex;
     align-items: center;
@@ -70,4 +72,7 @@ a:hover {
 
 #logo {
     height: 34px;
+    width: 400;
+    background-image: image-url("motiv.png");
+    background-size: contain;
 }
