--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,20 +1,97 @@
 #header-text {
-    font-size: 34px;
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, Roboto, 'Segoe UI', 
-    'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';;
+    font-size: 48px;
+    font-family: $strava-fonts;
     text-align: center;
     font-weight: bold;
     margin: 90px 0px 90px 0px;
     
 }
 
+#or-divider {
+    display: flex;
+    justify-content: center;
+    font-family: $strava-fonts;
+    color: $grey;
+    margin: 16px 0px 0px 0px;
+    font-size: 12px;
+}
+
 #phone-image {
-    height: 397px;
-    width: 373px;
+    height: 500px;
+    width: 467px;
 }
 
 .text-container {
     display:flex;
     justify-content: center;
     align-content: center;
+}
+
+#splash-button-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 400px;
+    margin: 4px 0px 0px 50px;
+}
+
+#splash-bottom-div {
+    display:flex;
+    justify-content: center;
+
+}
+
+.splash-signup-button {
+    height: 52px;
+    width: 301px;
+    background: white;
+    cursor: pointer;
+    margin: 16px 0px 0px 0px;
+    border: 1px solid #ccccd1;
+    border-radius: 4px;
+    text-decoration: none;
+    align-self: center;
+    font-size: 14px;
+    font-family: $strava-fonts;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#splash-disclaimer-text {
+    line-height: 1.71em;
+    color: #606065;
+    font-size: 12px;
+    font-family: $strava-fonts;
+    margin-top: 12px;
+    text-align: center;
+}
+
+
+
+#splash-demo-button {
+    color: white;
+    background-color: #3b5998;
+}
+
+#splash-demo-button:hover {
+    background-color: #233160;
+}
+
+#splash-login-button {
+    color: #2d2d32;
+}
+
+
+#splash-login-button:hover {
+    background-color: #F2F2FC;
+}
+
+#splash-signup-button:hover {
+    background-color: #F2F2FC;
+}
+
+#splash-signup-button {
+    color: #2d2d32;
 }
