--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -59,7 +59,7 @@
     justify-content: center;
 }
 
-#splash-disclaimer-text {
+.splash-disclaimer-text {
     line-height: 1.71em;
     color: #606065;
     font-size: 12px;
