--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyCN8Wsp5NgLfN-3DXaTQEwOPytC86qf7rE" %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyCN8Wsp5NgLfN-3DXaTQEwOPytC86qf7rE&libraries=drawing" %>
 
     <script type="text/javascript">
       window.motiv = "<%= image_url('motiv.png') %>"
