--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -14,6 +14,7 @@
     margin-left: 100px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .navbar-right {
@@ -52,6 +53,10 @@ a:hover {
     background-color: $button-hover-grey;
 }
 
+button:hover {
+    background-color: $button-hover-grey;
+}
+
 #non-splash:hover {
     color: $button-text-hover-black;
 }
@@ -73,6 +78,36 @@ a:hover {
 #logo {
     height: 34px;
     width: 400;
-    background-image: image-url("motiv.png");
+    // background-image: image-url("motiv.png");
     background-size: contain;
+}
+
+.logged-in-link {
+    position: relative;
+    font-family: $strava-fonts;
+    color: black;
+    width: 100px;
+    text-decoration: none;
+    text-align: center;
+    text-justify: center;
+    align-self: center;
+    border-radius: 4px;
+}
+
+.is-active {
+    border-radius: 4px;
+    font-weight: bold;
+    text-decoration-color: $orange;
+    -moz-text-decoration-style: solid 2px;
+}
+
+.is-active::after {
+    position: absolute;
+    content: "";
+    background: $orange;
+    height: 3px;
+    width: 100px;
+    top: 31px;
+    display: block;
+
 }
