Workout type selector working, timeout fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,4 +5,5 @@
 @import "./login.scss";
 @import "./signup.scss";
 @import "./route-show.scss";
+@import "./route-index.scss";
 @import "./map.scss";
