--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -29,7 +29,7 @@
     margin-left: 100px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .new-route-navbar-right {
@@ -115,6 +115,11 @@
     padding: 10px;
     text-align: center;
     border-radius: 4px;
-    
-    
+}
+
+
+#route-error-container {
+    justify-self: center;
+    align-self: center;
+    color: red;
 }
