--- a/app/assets/stylesheets/route-index.scss
+++ b/app/assets/stylesheets/route-index.scss
@@ -1,20 +1,135 @@
 .map-index-super-container {
     display: flex;
-    flex-flow: map;
-    width: 500px;
+    flex-wrap: wrap;
+    width: 750px;
+    margin: 50px 0px 0px 100px;
+    justify-content: flex-start;
     flex-direction: row;
 }
 
 #index-map {
-    width: 150px;
-    height: 100px;
+    width: 225px;
+    height: 175px;
 }
 
 .map-index-container {
-    width: 100px;
+    margin: 0 20px 20px 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .index-map-itself {
     width: 200px;
 }
 
+.map-index-data-container {
+    width: 225px;
+    height: 190px;
+    display: flex;
+    flex-direction: column;
+    background-color: #F7F7F7;
+}
+
+.index-stat-container {
+    background-color: yellowgreen;
+    display: flex;
+    justify-content: space-evenly;
+    height: 100px;
+}
+
+.index-route-name {
+    color: #007FB6;
+    font-size: 20px;
+    line-height: 25px;
+    font-family: $strava-fonts;
+    text-align: left;
+    justify-self: center;
+    align-content: center;
+    justify-content: center;
+    // margin: 20px 0px;
+    box-sizing: content-box;
+    margin: 20px 0px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#index-sub-data-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.ri-map-data-container {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin: 0px 20px 25px 0px;
+}
+
+.ri2-map-data-container{
+    display: flex;
+    flex-direction: row;
+    text-align: left;
+    margin: 0px 20px 25px 0px;
+}
+
+.ri2-map-data-label{
+    text-align: end;
+    font-family: $strava-fonts;
+    font-size: 12px;
+    color: #666;
+    margin: 8px 15px 0px 0px;
+}
+
+.ri-map-data-item {
+    font-family: $strava-fonts;
+    font-size: 22px;
+    margin: 0px 0px 7px 0px;
+    color: #333333;
+}
+
+#ri-header-container{
+    width: 900px;
+    margin: 45px 0 0 100px;
+    padding: 0px 0px 30px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 2px solid #e6e6eb;
+}
+
+#ri-page-label {
+    font-family: $strava-fonts;
+    font-size: 34px;
+    font-weight: bold;
+}
+
+#ri-new-route-link {
+    margin: 34px 0px 0px 0px;
+    height: 33px;
+    width: 153px;
+    cursor: pointer;
+    background-color: #FC4C01;
+    color: white;
+    border-radius: 4px;
+    text-decoration: none;
+    align-self: center;
+    font-size: 14px;
+    font-family: $strava-fonts;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+#ri-header-right {
+    display: flex;
+    flex-direction: row;
+    color: #2d2d32;
+    font-family: $strava-fonts;
+    font-size: 13px;
+}
+
+#header-paragraph{
+    margin: 5px 20px 0 0;
+}
