--- a/app/assets/stylesheets/route-show.scss
+++ b/app/assets/stylesheets/route-show.scss
@@ -14,7 +14,8 @@
     font-size: 34px;
     font-family: $strava-fonts;
     text-align: left;
-    margin-left: 100px;
+    width: 400px;
+    // margin-left: 100px;
     margin-top: 50px;
     margin-bottom: 20px;
 }
@@ -30,7 +31,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin: 40px 0 0 0;
+    margin: 10px 0 0 0;
 }
 
 .rs-map-data-container {
@@ -59,4 +60,51 @@
     justify-content: flex-start;
     margin-left: 20px;
 
+}
+
+#rs-top-container {
+    display: flex;
+    flex-direction: row;
+    margin: 4px 0 0 100px;
+    justify-content: flex-start;
+    // align-content: center;
+    align-items: flex-end;
+}
+
+.rs-route-button {
+    margin: 34px 0px 20px 0px;
+    height: 33px;
+    width: 153px;
+    cursor: pointer;
+  
+    border-radius: 4px;
+    text-decoration: none;
+    align-self: center;
+    font-size: 14px;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+#rs-delete-button {
+    padding: 6px 16px;
+}
+
+#rs-top-nav {
+    display: flex;
+    margin: 0 0 10px 0;
+}
+
+#rs-save-button {
+    background-color: #FC4C01;
+    color: white;
+    text-decoration: none;
+    margin-left: 10px;
+}
+
+button {
+    border: none;
 }
